# audioarchive

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  config.yaml  docker-compose.dev.yaml  pytest.ini  requirements.txt  setup.cfg  setup.py
docker/: .gitignore  Dockerfile  build.sh  docker-compose.dev.yaml  docker-compose.jupyter.yaml  docker-compose.redis.yaml  entrypoint.sh
docker/config/: config.yaml  logging.config
frontend/: README.md  package.json  vue.config.js
frontend/scripts/: generate-client.js
frontend/src/: App.vue  router.js
frontend/src/api/: apispec_1.json
frontend/src/client/: ApiClient.js  index.js
frontend/src/client/api/: DefaultApi.js
frontend/src/client/model/: Attachment.js  AudioAttachment.js  CatalogEntrySchema.js  Group.js  RecordingEntry.js
frontend/src/components/: Home.vue  QRScan.vue
frontend/src/components/pages/: Catalog.vue  Home.vue
frontend/src/components/views/: LineChart.vue  QRScan.vue  RingChart.vue
frontend/src/scss/: app.scss  bootswatch.scss
frontend/src/store/: index.js  ui.js
notebooks/: audio_convert_test.ipynb  config.yaml  dataclass-poc.ipynb  editing_wiki.ipynb  fft_test.ipynb  find_keys.ipynb
src/tapearchive/: app.py  config.py  find_keys.py  flask_app.py  main.py
src/tapearchive/api/: catalog.py  import_csv.py  status.py
src/tapearchive/models/: catalog.py  raw_data.py
src/tapearchive/tasks/: add_album_art.py  audio_analisis.py  audio_convert.py  audiogram.py  identify_tracks.py  utils.py
src/tapearchive/utils/: __init__.py  nextcloud_notification.py
src/tapearchive/workflow/: base_workflow.py  conversion_workflow.py  dependency_tree.py
src/tapearchive/workflow/tasks/: audiogram.py
src/tq/: database.py  redis_task_queue.py  task_dispacher.py
tapearchive/: config.py  find_keys.py  import.py  organize.py
tapearchive/models/: catalog.py  objects.py
tapearchive/utils/: __init__.py
tapearchive/workflow/tasks/: audio_analisis.py  audio_convert.py  audio_segments.py
tests/: conftest.py
tests/tapearchive/integration/: conftest.py  test_audioconvert.py  test_dao.py
tests/tapearchive/integration/data/: a1.yaml  a2.yaml
tests/tapearchive/unittests/: test_file_io.py  test_pipeline.py  test_workflow.py
tests/tq/unittests/: test_dao.py  test_job_system.py  test_redis_task_queue.py  test_task_dispatcher.py
tq/: database.py  job_system.py  task_dispacher.py
