[metadata]
name = cai-tapearchive
version = 0.1
description = TBD
long_description = file: README.md, LICENSE
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
install_requires =
    more_itertools==8.12.0
    dataclasses_json==0.5.7
    PyYAML==6.0
    # TODO: Pin versions
    redis
    atomic
    tqdm
    pyyaml
    dataclasses-json
    flask
    flask-restful
    waiting
    mwclient
    numpy
    librosa

setup_requires =
    wheel

package_dir =
    =src

packages=find:

[options.packages.find]
where = src
exclude =
    tests
    *.tests
    tests.*
    *.tests.*

[options.extras_require]
test =
    pytest
    flake8
    # autoflake8
    waiting

[options.entry_points]
console_scripts =
    organize-catalog=tapearchive.organize:main
    import-catalog=tapearchive.import:main
    audio-processor=tapearchive.main:main
    find-keys=tapearchive.find_keys:main

[flake8]
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 120
max-complexity = 24
select = B,C,E,F,W,T4,B9

[black]
line-length = 120

[aliases]
test=pytest
