[metadata]
name = cai-tapearchive
version = 0.1
description = TBD
long_description = file: README.md, LICENSE
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
install_requires =
    more_itertools==8.12.0
    dataclasses_json==0.5.7
    
    PyYAML==6.0
    tqdm==4.65.0
    python-statemachine==2.0.0
    bson==0.5.10

    waiting==1.4.1
    mwclient==0.10.1
    numpy==1.24.4
    librosa==0.10.0.post2

    Flask==2.3.2
    Flask-RESTful==0.3.10
    flasgger==0.9.7.1
    marshmallow-dataclass==8.5.14
    apispec==6.3.0
    apispec_webframeworks==0.5.2

setup_requires =
    wheel

package_dir =
    =src

packages=find_namespace:

[options.packages.find]
where = src
exclude =
    tests
    *.tests
    tests.*
    *.tests.*

[options.extras_require]
test =
    pytest==6.2.5
    flake8
    waiting
    fakeredis
pack = 
    pytqlib@git+https://github.com/caiwan/pytqlib.git@0.0.5#egg=pytqlib

[options.entry_points]
console_scripts =
    organize-catalog=tapearchive.organize:main
    import-catalog=tapearchive.main:data_import_entrypont
    audio-processor-manager=tapearchive.main:main
    audio-processor-worker=tapearchive.main:worker_entrypoint
    audio-processor-web=tapearchive.main:flask_entrypoint
    find-keys=tapearchive.find_keys:main

[flake8]
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 120
max-complexity = 24
select = B,C,E,F,W,T4,B9

[black]
line-length = 120

[aliases]
test=pytest

[tool:pytest]
log_cli = 1
log_cli_level = DEBUG
